# ipython-autoimport

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  _ipython_autoimport_version.py  azure-pipelines.yml  ipython_autoimport.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml
lib/: .gitignore  ipython_autoimport.py
src/: ipython_autoimport.py
tests/: test_autoimport.py
